testsuite/serd-tests/good/test-true-ends-with-dot.nt
<http://example.org/eg#s> <http://example.org/eg#p> "true"^^<http://www.w3.org/2001/XMLSchema#boolean> .
