testsuite/serd-tests/bad/bad-nt-syntax-blank-u037E.nt
<http://example.org/s> <http://example.org/p> _:in;valid .
